--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PL'
 - !lcsh 'China -- History -- Five dynasties and the Ten kingdoms, 907-979 -- Fiction'
 - !lcsh 'China -- History -- Tang dynasty, 618-907 -- Fiction'
+- GITenberg
 title: 殘唐五代史演義傳
 url: http://www.gutenberg.org/ebooks/27145
